<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_depth</name>
  <version>0.1.0</version>
  <description>
    Stereo vision based depth/distance measurement for ROS2 Jazzy.
    Subscribes to two image streams (/camera0/image_raw, /camera1/image_raw)
    and their CameraInfo topics. Performs uncalibrated stereo rectification
    (SIFT + RANSAC), computes a disparity map with StereoSGBM, and lets the
    user select a rectangular (left-click drag) or circular (right-click drag)
    region with the mouse; the median depth (in mm and m) inside that region
    is displayed on the image.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
